feat: add book
